style: fixed z-index of popup

--- a/src/components/WarningPopup.css
+++ b/src/components/WarningPopup.css
@@ -6,8 +6,9 @@
   height: 100vh;
   top: 0;
   left: 0;
+  z-index: 1;
 }
- 
+
 .box {
   position: relative;
   width: 70%;
